Split cohort build from cohort progress (spec §13.7)
Operator ruling: the platform Cohorts console builds cohorts and nothing
else; anything that names or measures a founder is org data and belongs on
the organization console.

- Matrix and pulse move off /api/cohorts/{id}/program to
  /api/organizations/{orgId}/cohorts/{id}/{matrix,pulse}, rows cut to the
  org's own members; an unassigned cohort is a 404, not an empty list.
- Cohort participation and the whole Sessions surface (CRUD + roll call)
  move to the org path under the same guard; roster reads, the expected-
  attendee picker and every tick are bounded to own members.
- New GET /api/cohorts/{id}/members: names only, so the builder's module
  audience stays pickable without reading progress.
- CohortDto carries the assigned orgs' names — cohort names are no longer
  unique, and the platform switcher is the only place to tell two apart.